Added refactored format-check script to run in pre-commit
removed typo

added repo to test pre-commit

test pre-commit with typo

undo typo and uncomment mdlint

test pre-commit with typo

remove type

test pre-commit

uncomment format-check

test dummy format

test dummy

commit dummies to git for test git diff

test pre-commit eslint

pre-commit config to replace custom pre-commit

added directory lib to hooks

test pre-commit yarn install

yarn install logic to pre-commit

prettified pre-commit-config

added pre-push hooks

test dummy pre-push

test pre-push yarn jest

test pre-push yarn jest

test again

test pre-push again

test again

TEST CORRECTLY

test manual push

another manual test

test all pre-commit hooks

added default hooks

added pre-push test for lib

test git hooks dir

test git hooks dir

test dir with dummie

undo hook dir back to before

test git hooks

test git hooks

test git hooks

test git hooks

test git hooks

test git hooks

test git hooks

test git hooks

test git hooks

test git hooks

test git hooks

test git hooks

reset after test

test git hooks

test git hooks

test git hooks

reset after test

test git hooks

reset after test

test git hooks

test git hooks

reset after test

test git hooks

reset after test

reset after test

reset after test

reset after test

reset after test

test script for git hooks done

githook test and log for documentation

reset after test

reset after test

reset after test

reset after test

reset after test

reset after test

reset after test

reset after test

test git hooks

reset after test

test git hooks

reset after test

test git hooks

reset after test

improved test

went back to original test

test git hooks

final test script

reset after test

test git hooks

reset after test

reset after test

reset after test

reset after test

reset after test

test and log done

added new githook script and updated guide

comment out lib test hook

stage markdownlint changes

log githook run

accept

--- a/deploy/services/package.json
+++ b/deploy/services/package.json
@@ -5,6 +5,9 @@
   "author": "Prasad Talasila",
   "private": false,
   "type": "module",
+  "scripts": {
+    "clean": "npx rimraf node_modules"
+  },
   "dependencies": {
     "chalk": "^5.3.0",
     "execa": "^8.0.1",
