--- a/.markdownlint.yaml
+++ b/.markdownlint.yaml
@@ -1,7 +1,7 @@
-# Default state for all rules
 default: true
-
-# MD013/line-length - Line length
-MD013:
-  line_length: 80
-  tables: false
+MD033: false
+MD013: 
+  code_blocks: false
+  tables: true
+MD046: 
+  style: "fenced"
