--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,7 +6,7 @@ repos:
         entry: ./script/pre-commit-format-check.sh
         language: script
         args: [client, servers/execution/runner]
-        stages: [pre-commit]
+        # stages: [pre-commit]
 
   # - repo: https://github.com/igorshubovych/markdownlint-cli
   #   rev: v0.32.2
