--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,10 +7,9 @@ repos:
         language: script
         args: [client, servers/execution/runner]
         # stages: [pre-commit]
-        # test
 
-  # - repo: https://github.com/igorshubovych/markdownlint-cli
-  #   rev: v0.32.2
-  #   hooks:
-  #     - id: markdownlint
-  #       args: ["--fix"]
+  - repo: https://github.com/igorshubovych/markdownlint-cli
+    rev: v0.32.2
+    hooks:
+      - id: markdownlint
+        args: ["--fix"]
