--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,15 +1,29 @@
 repos:
-  - repo: local
-    hooks:
-      - id: format-check
-        name: format check
-        entry: ./script/pre-commit-format-check.sh
-        language: script
-        args: [client, servers/execution/runner]
-        stages: [pre-commit]
+  # - repo: local
+  #   hooks:
+  #     - id: format-check
+  #       name: format check
+  #       entry: ./script/pre-commit-format-check.sh
+  #       language: script
+  #       args: [client, servers/execution/runner]
+  #       stages: [pre-commit]
 
-  - repo: https://github.com/igorshubovych/markdownlint-cli
-    rev: v0.32.2
+  # - repo: https://github.com/igorshubovych/markdownlint-cli
+  #   rev: v0.32.2
+  #   hooks:
+  #     - id: markdownlint
+  #       args: ["--fix"]
+
+  - repo: https://github.com/pre-commit/mirrors-prettier
+    rev: v3.1.0
     hooks:
-      - id: markdownlint
-        args: ["--fix"]
+      - id: prettier
+        args:
+          [
+            "--ignore-path",
+            "../.gitignore",
+            "--write",
+          ]
+        files: |
+          - '^client/.*\.(ts|tsx|css|scss)$'
+          - '^servers/execution/runners/.*\.(ts|tsx|css|scss)$'
