--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -14,16 +14,20 @@ repos:
   #     - id: markdownlint
   #       args: ["--fix"]
 
-  - repo: https://github.com/pre-commit/mirrors-prettier
-    rev: v3.1.0
+  # - repo: https://github.com/pre-commit/mirrors-prettier
+  #   rev: v3.1.0
+  #   hooks:
+  #     - id: prettier
+  #       args:eslint
+  #         [
+  #           "--ignore-path",
+  #           "../.gitignore",
+  #           "--write",
+  #         ]
+  #       files: '^(client|servers/execution/runner)/.*\.(ts|tsx|css|scss)$'
+
+  - repo: https://github.com/pre-commit/mirrors-eslint
+    rev: v8.54.0
     hooks:
-      - id: prettier
-        args:
-          [
-            "--ignore-path",
-            "../.gitignore",
-            "--write",
-          ]
-        files: |
-          - '^client/.*\.(ts|tsx|css|scss)$'
-          - '^servers/execution/runners/.*\.(ts|tsx|css|scss)$'
+      - id: eslint
+        files: ^servers/execution/runner/.*
