pre-commit config to replace custom pre-commit

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,33 +1,24 @@
 repos:
-  # - repo: local
-  #   hooks:
-  #     - id: format-check
-  #       name: format check
-  #       entry: ./script/pre-commit-format-check.sh
-  #       language: script
-  #       args: [client, servers/execution/runner]
-  #       stages: [pre-commit]
-
-  # - repo: https://github.com/igorshubovych/markdownlint-cli
-  #   rev: v0.32.2
-  #   hooks:
-  #     - id: markdownlint
-  #       args: ["--fix"]
-
-  # - repo: https://github.com/pre-commit/mirrors-prettier
-  #   rev: v3.1.0
-  #   hooks:
-  #     - id: prettier
-  #       args:eslint
-  #         [
-  #           "--ignore-path",
-  #           "../.gitignore",
-  #           "--write",
-  #         ]
-  #       files: '^(client|servers/execution/runner)/.*\.(ts|tsx|css|scss)$'
+  - repo: https://github.com/pre-commit/mirrors-prettier
+    rev: v3.1.0
+    hooks:
+      - id: prettier
+        args:
+          [
+            "--ignore-path",
+            "../.gitignore",
+            "--write",
+          ]
+        files: '^(client|servers/execution/runner)/.*\.(ts|tsx|css|scss)$'
 
   - repo: https://github.com/pre-commit/mirrors-eslint
     rev: v8.54.0
     hooks:
       - id: eslint
-        files: ^servers/execution/runner/.*
+        files: '^(client|servers/execution/runner)/.*'
+
+  - repo: https://github.com/igorshubovych/markdownlint-cli
+    rev: v0.37.0
+    hooks:
+      - id: markdownlint
+        args: ["--fix"]
