--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,4 +1,17 @@
 repos:
+  - repo: local
+    hooks:
+      - id: yarn-install
+        name: yarn install
+        entry: bash
+        language: system
+        pass_filenames: false
+        # stages: [manual]
+        verbose: true
+        files: '^client/.*'
+        args: ["-c", "cd client && yarn install"]
+
+
   - repo: https://github.com/pre-commit/mirrors-prettier
     rev: v3.1.0
     hooks:
