--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,16 +1,24 @@
 repos:
   - repo: local
     hooks:
-      - id: yarn-install
-        name: yarn install
+      - id: yarn-install-client
+        name: yarn install client
         entry: bash
         language: system
-        pass_filenames: false
-        # stages: [manual]
-        verbose: true
         files: '^client/.*'
         args: ["-c", "cd client && yarn install"]
-
+      - id: yarn-install-runner
+        name: yarn install runner
+        entry: bash
+        language: system
+        files: '^servers/execution/runner/.*'
+        args: ["-c", "cd servers/execution/runner && yarn install"]
+      - id: yarn-install-lib
+        name: yarn install lib
+        entry: bash
+        language: system
+        files: '^servers/lib/.*'
+        args: ["-c", "cd servers/lib && yarn install"]
 
   - repo: https://github.com/pre-commit/mirrors-prettier
     rev: v3.1.0
