--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,6 +19,21 @@ repos:
         language: system
         files: "^servers/lib/.*"
         args: ["-c", "cd servers/lib && yarn install"]
+      
+      - id: yarn-jest-client
+        name: yarn jest client
+        entry: bash
+        language: system
+        files: "^client/.*"
+        args: ["-c", "cd client && yarn jest . --coverage=false"]
+        stages: [pre-push]
+      - id: yarn-test-runner
+        name: yarn test runner
+        entry: bash
+        language: system
+        files: "^servers/execution/runner/.*"
+        args: ["-c", "cd servers/execution/runner && yarn test:nocov"]
+        stages: [pre-push]
 
   - repo: https://github.com/pre-commit/mirrors-prettier
     rev: v3.1.0
@@ -26,12 +41,15 @@ repos:
       - id: prettier
         args: ["--ignore-path", "../.gitignore", "--write"]
         files: '^(client|servers/execution/runner|servers/lib)/.*\.(ts|tsx|css|scss)$'
+        stages: [pre-commit]
 
   - repo: https://github.com/pre-commit/mirrors-eslint
     rev: v8.54.0
     hooks:
       - id: eslint
         files: "^(client|servers/execution/runner|servers/lib)/.*"
+        stages: [pre-commit]
+
 
   - repo: https://github.com/igorshubovych/markdownlint-cli
     rev: v0.37.0
@@ -39,3 +57,4 @@ repos:
       - id: markdownlint
         args: ["--fix"]
         files: "^(client|servers/execution/runner|servers/lib)/.*"
+        stages: [pre-commit]
