--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -35,7 +35,7 @@ repos:
         args: ["-c", "cd servers/execution/runner && yarn test:nocov"]
         pass_filenames: false
         verbose: true
-        # stages: [pre-push]
+        stages: [pre-push]
 
   - repo: https://github.com/pre-commit/mirrors-prettier
     rev: v3.1.0
