--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -21,7 +21,7 @@ repos:
         language: system
         files: "^servers/lib/.*"
         args: ["-c", "cd servers/lib && yarn install"]
-      
+
       - id: yarn-jest-client
         name: yarn jest client
         entry: bash
@@ -36,6 +36,13 @@ repos:
         files: "^servers/execution/runner/.*"
         args: ["-c", "cd servers/execution/runner && yarn test:nocov"]
         stages: [pre-push]
+      # - id: yarn-test-lib
+      #   name: yarn test lib
+      #   entry: bash
+      #   language: system
+      #   files: "^servers/lib/.*"
+      #   args: ["-c", "cd servers/lib && yarn jest . --coverage=false"]
+      #   stages: [pre-push]
 
   - repo: https://github.com/pre-commit/mirrors-prettier
     rev: v3.1.0
@@ -51,7 +58,6 @@ repos:
       - id: eslint
         files: "^(client|servers/execution/runner|servers/lib)/.*"
         stages: [pre-commit]
-
 
   - repo: https://github.com/igorshubovych/markdownlint-cli
     rev: v0.37.0
