--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -51,7 +51,7 @@ repos:
     hooks:
       - id: eslint
         files: "^(client|servers/execution/runner|servers/lib)/.*"
-        stages: [pre-commit]
+        # stages: [pre-commit]
 
   # - repo: https://github.com/igorshubovych/markdownlint-cli
   #   rev: v0.37.0
