--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -36,13 +36,13 @@ repos:
         files: "^servers/execution/runner/.*"
         args: ["-c", "cd servers/execution/runner && yarn test:nocov"]
         stages: [pre-push]
-      - id: yarn-test-lib
-        name: yarn test lib
-        entry: bash
-        language: system
-        files: "^servers/lib/.*"
-        args: ["-c", "cd servers/lib && yarn jest . --coverage=false"]
-        stages: [pre-push]
+      # - id: yarn-test-lib
+      #   name: yarn test lib
+      #   entry: bash
+      #   language: system
+      #   files: "^servers/lib/.*"
+      #   args: ["-c", "cd servers/lib && yarn jest . --coverage=false"]
+      #   stages: [pre-push]
 
   - repo: https://github.com/pre-commit/mirrors-prettier
     rev: v3.1.0
