--- a/servers/lib/package.json
+++ b/servers/lib/package.json
@@ -30,6 +30,7 @@
     "@nestjs/graphql": "^12.0.9",
     "@nestjs/platform-express": "^10.2.6",
     "axios": "^1.5.1",
+    "cloudcmd": "^16.17.7",
     "commander": "^11.1.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
