--- a/servers/lib/package.json
+++ b/servers/lib/package.json
@@ -29,6 +29,8 @@
     "@nestjs/core": "^10.2.6",
     "@nestjs/graphql": "^12.0.9",
     "@nestjs/platform-express": "^10.2.6",
+    "@nestjs/platform-socket.io": "^10.2.10",
+    "@nestjs/websockets": "^10.2.10",
     "axios": "^1.5.1",
     "cloudcmd": "^16.17.7",
     "commander": "^11.1.0",
@@ -38,6 +40,7 @@
     "mock-fs": "^5.2.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
+    "socket.io": "^4.7.2",
     "type-graphql": "^2.0.0-beta.3"
   },
   "devDependencies": {
