--- a/servers/lib/package.json
+++ b/servers/lib/package.json
@@ -6,7 +6,8 @@
   "contributors": [
     "Prasad Talasila",
     "Mads Kelberg",
-    "Linda Nguyen"
+    "Linda Nguyen",
+    "Oliver Geneser"
   ],
   "private": false,
   "license": "SEE LICENSE IN <LICENSE.md>",
@@ -40,6 +41,7 @@
     "type-graphql": "^2.0.0-beta.3"
   },
   "devDependencies": {
+    "@apollo/rover": "^0.21.0",
     "@nestjs/cli": "^10.1.18",
     "@nestjs/schematics": "^10.0.2",
     "@nestjs/testing": "^10.2.6",
@@ -60,6 +62,7 @@
     "prettier": "^3.0.3",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
+    "ts-morph": "^20.0.0",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "4.2.0",
     "typescript": "^5.2.2"
