markdownlint and shellcheck on alle files

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -64,14 +64,14 @@ repos:
     rev: v0.37.0
     hooks:
       - id: markdownlint
-        files: '^(client|servers/execution/runner|servers/lib)/.*\.md$'
+        files: '.*\.md$'
         stages: [pre-commit]
 
   - repo: https://github.com/syntaqx/git-hooks
     rev: v0.0.18
     hooks:
       - id: shellcheck
-        files: '^(docs|deploy|script|ssl)/.*'
+        files: '.*'
         stages: [pre-commit]
 
   - repo: https://github.com/pre-commit/pre-commit-hooks
