wrapped mdlint hook to not exit 1 on pre-commit

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -65,6 +65,8 @@ repos:
     hooks:
       - id: markdownlint
         files: '.*\.md$'
+        entry: ./script/markdownlint-hook.sh
+        verbose: true
         stages: [pre-commit]
 
   - repo: https://github.com/syntaqx/git-hooks
