--- a/servers/lib/package.json
+++ b/servers/lib/package.json
@@ -34,12 +34,15 @@
     "@nestjs/core": "^10.3.0",
     "@nestjs/graphql": "^12.0.11",
     "@nestjs/platform-express": "^10.3.0",
+    "axios": "^1.5.1",
+    "cloudcmd": "^16.17.7",
     "commander": "^11.1.0",
     "dotenv": "^16.3.1",
     "graphql": "^16.8.1",
     "mock-fs": "^5.2.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
+    "socket.io": "^4.7.2",
     "type-graphql": "^2.0.0-beta.3"
   },
   "devDependencies": {
