--- a/client/package.json
+++ b/client/package.json
@@ -15,15 +15,22 @@
   "private": false,
   "type": "module",
   "scripts": {
-    "build": "react-scripts build",
+    "build": "npx tsc",
     "clean": "npx rimraf build/ node_modules/ coverage/ playwright-report/  *.svg",
-    "configapp": "script/config.bash",
+    "configapp:dev": "npx cross-env NODE_OPTIONS=--experimental-vm-modules NODE_NO_WARNINGS=1 node config/dev.js",
+    "configapp:prod": "npx cross-env NODE_OPTIONS=--experimental-vm-modules NODE_NO_WARNINGS=1 node config/prod.js",
+    "configapp:test": "npx cross-env NODE_OPTIONS=--experimental-vm-modules NODE_NO_WARNINGS=1 node config/test.js",
     "develop": "npx react-scripts start",
     "format": "prettier --ignore-path ../.gitignore --write \"**/*.{ts,tsx,css,scss}\"",
     "graph": "npx madge --image src.svg src && npx madge --image test.svg test",
     "start": "serve -s build -l 4000",
     "syntax": "npx eslint . --fix",
-    "test": "script/test.bash"
+    "test:unit": "npx cross-env NODE_OPTIONS=--experimental-vm-modules NODE_NO_WARNINGS=1 jest -c ./jest.config.json ../test/unitTests --coverage",
+    "test:int": "npx cross-env NODE_OPTIONS=--experimental-vm-modules  NODE_NO_WARNINGS=1 jest -c ./jest.integration.config.json ../test/integration",
+    "test:e2e": "npx cross-env NODE_OPTIONS=--experimental-vm-modules  NODE_NO_WARNINGS=1 yarn configapp test && yarn start >/dev/null & playwright test && npx kill-port 4000 && yarn configapp dev",
+    "test:all": "yarn test:unit && yarn test:int && yarn test:e2e",
+    "install-deps": "npx cross-env NODE_OPTIONS=--experimental-vm-modules yarn install --frozen-lockfile && npx playwright install-deps",
+    "install": "yarn install --frozen-lockfile && npx playwright install-deps"
   },
   "eslintConfig": {
     "extends": [
@@ -41,6 +48,7 @@
     "@mui/material": "^5.14.8",
     "@reduxjs/toolkit": "^1.9.7",
     "dotenv": "^16.1.4",
+    "fs-extra": "^11.2.0",
     "oidc-client-ts": "^2.2.2",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
@@ -53,6 +61,7 @@
     "redux": "^4.2.1",
     "resize-observer-polyfill": "^1.5.1",
     "serve": "^14.2.1",
+    "shelljs": "^0.8.5",
     "styled-components": "^6.1.1",
     "typescript": "^4.9.5"
   },
