--- a/client/package.json
+++ b/client/package.json
@@ -54,7 +54,19 @@
     "resize-observer-polyfill": "^1.5.1",
     "serve": "^14.2.1",
     "styled-components": "^6.1.1",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "react-iframe": "^1.8.5",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-jest": "^27.6.0",
+    "@types/styled-components": "^5.1.32",
+    "eslint": "^8.54.0",
+    "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-react": "^7.33.2",
+    "@typescript-eslint/eslint-plugin": "^6.12.0",
+    "@typescript-eslint/parser": "^6.12.0",
+    "react-scripts": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.23.3",
@@ -68,22 +80,10 @@
     "@types/jest": "^29.5.10",
     "@types/react": "^18.2.38",
     "@types/react-dom": "^18.2.17",
-    "@types/styled-components": "^5.1.32",
-    "@typescript-eslint/eslint-plugin": "^6.12.0",
-    "@typescript-eslint/parser": "^6.12.0",
-    "eslint": "^8.54.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-import": "^2.29.0",
-    "eslint-plugin-jest": "^27.6.0",
-    "eslint-plugin-jsx-a11y": "^6.8.0",
-    "eslint-plugin-react": "^7.33.2",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "playwright": "^1.32.1",
     "prettier": "3.1.0",
-    "react-iframe": "^1.8.5",
-    "react-scripts": "^5.0.1",
     "ts-jest": "^29.1.1"
   },
   "browserslist": {
