Adds localhost install feature (PR #348 and #380)
  - Updates installation scripts and config files
     to make the localhost install possible.
  - Makes both trial and localhost install create
     single user only.

---------
Co-authored-by: nichlaes <nichlaes.soerensen@gmail.com>

--- a/mkdocs-github.yml
+++ b/mkdocs-github.yml
@@ -20,6 +20,7 @@ nav:
       - Overview: admin/overview.md
       - Authentication: admin/client/auth.md
       - Host Install:
+        - Localhost: admin/localhost.md
         - Trial: admin/trial.md
         - Production: admin/host.md
       - Vagrant:
