AuthMS - MLworkspace integration trial

--- a/servers/auth/compose.yml
+++ b/servers/auth/compose.yml
@@ -1,16 +1,14 @@
 version: '3'
-
 services:
   traefik:
     image: traefik:v2.10
     command: 
-      #- "--api.insecure=true"
+      - "--api.insecure=true"
       - "--providers.docker=true"
       - "--entryPoints.web.address=:80"
-      #- "--log.level=trace"
     ports:
       - "80:80"
-      #- "8080:8080"
+      - "8080:8080"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
 
@@ -19,58 +17,75 @@ services:
     labels:
       - "traefik.enable=true"
       #Models an Auth service that is open to all
-      - "traefik.http.routers.whoami.entryPoints=web"
-      - "traefik.http.routers.whoami.rule=Path(`/os`)"
-      - "traefik.http.routers.whoami.middlewares=traefik-forward-auth"
-
+      - "traefik.http.routers.common.entryPoints=web"
+      - "traefik.http.routers.common.rule=Path(`/`)"
+      - "traefik.http.routers.common.middlewares=traefik-forward-auth"
+  
+  library:
+    image: httpd:alpine3.19
+    volumes:
+      - ${FILE_DIR}:/usr/local/apache2/htdocs/lib
+    labels:
+    
+      - "traefik.enable=true"
       #Models a NoAuth needed service
-      - "traefik.http.routers.whoamifree.entryPoints=web"
-      - "traefik.http.routers.whoamifree.rule=Path(`/public`)"
-      - "traefik.http.routers.whoamifree.middlewares=traefik-forward-auth"
+      - "traefik.http.routers.noauth.entryPoints=web"
+      - "traefik.http.routers.noauth.rule=Path(`/lib`)"
+      - "traefik.http.routers.noauth.middlewares=traefik-forward-auth"
 
+  user1:
+    image: mltooling/ml-workspace-minimal:0.13.2
+    volumes:
+      - ${TOP_DIR}/files/common:/workspace/common 
+      - ${TOP_DIR}/files/${username1}:/workspace
+    environment:
+      - AUTHENTICATE_VIA_JUPYTER=
+      - WORKSPACE_BASE_URL=${username1}
+    labels:
+      - "traefik.enable=true"
       #Models a service only visible to user1
       - "traefik.http.routers.u1.entryPoints=web"
-      - "traefik.http.routers.u1.rule=Path(`/user1`)"
+      - "traefik.http.routers.u1.rule=Path(`/${username1}`)"
       - "traefik.http.routers.u1.middlewares=traefik-forward-auth"
-
+  
+  user2:
+    image: mltooling/ml-workspace-minimal:0.13.2
+    volumes:
+      - /home/astitva/Desktop/DTaaS/servers/auth/files/common:/workspace/common 
+      - /home/astitva/Desktop/DTaaS/servers/auth/files/user2:/workspace
+    environment:
+      - AUTHENTICATE_VIA_JUPYTER=
+      - WORKSPACE_BASE_URL=user2
+    labels:
+      - "traefik.enable=true"
       #Models a service only visible to user2
       - "traefik.http.routers.u2.entryPoints=web"
       - "traefik.http.routers.u2.rule=Path(`/user2`)"
       - "traefik.http.routers.u2.middlewares=traefik-forward-auth"
   
-  dummy:
-    image: mpepping/whoami
-    environment:
-      - MESSAGE="Hello there, I'm a container."
-    labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.dummy2.entryPoints=web"
-      - "traefik.http.routers.dummy2.rule=Path(`/dummy`)"
   
   traefik-forward-auth:
     image: thomseddon/traefik-forward-auth:latest
     volumes:
-      - /home/astitva/Desktop/DTaaS/servers/auth/conf:/rules
+      - /home/astitva/Desktop/DTaaS/servers/auth/conf:/conf
     environment:
       - DEFAULT_PROVIDER=generic-oauth
-      - PROVIDERS_GENERIC_OAUTH_AUTH_URL=https://gitlab.foo.com/oauth/authorize
-      - PROVIDERS_GENERIC_OAUTH_TOKEN_URL=https://gitlab.foo.com/oauth/token
-      - PROVIDERS_GENERIC_OAUTH_USER_URL=https://gitlab.foo.com/api/v4/user
-      - PROVIDERS_GENERIC_OAUTH_CLIENT_ID=xxxx
-      - PROVIDERS_GENERIC_OAUTH_CLIENT_SECRET=xxxx
+      - PROVIDERS_GENERIC_OAUTH_AUTH_URL=https://maestro.cps.digit.au.dk/oauth/authorize
+      - PROVIDERS_GENERIC_OAUTH_TOKEN_URL=https://maestro.cps.digit.au.dk/oauth/token
+      - PROVIDERS_GENERIC_OAUTH_USER_URL=https://maestro.cps.digit.au.dk/api/v4/user
+      - PROVIDERS_GENERIC_OAUTH_CLIENT_ID=eef17993ec9c076e78b39684ca0e7ae8dffda8f646cc637641928dc85e4fead8
+      - PROVIDERS_GENERIC_OAUTH_CLIENT_SECRET=cbe95c2f9139e02219d5d2557c36961918d8900013c73d16631846c7a2850ed8
       - PROVIDERS_GENERIC_OAUTH_SCOPE=read_user
-      - SECRET= abcdefgih
+      - SECRET= abcdefgi
       # INSECURE_COOKIE is required if not using a https entrypoint
       - INSECURE_COOKIE=true
-      #- LOG_LEVEL=debug
-      - LOGOUT_REDIRECT=https://www.google.com/
-      - CONFIG=/rules
+      - CONFIG=/conf
     labels:
       - "traefik.enable=true"
 
-      - "traefik.http.routers.oauth.entryPoints=web"
-      - "traefik.http.routers.oauth.rule=PathPrefix(`/_oauth`)"
-      - "traefik.http.routers.oauth.middlewares=traefik-forward-auth"
+      - "traefik.http.routers.redirect.entryPoints=web"
+      - "traefik.http.routers.redirect.rule=PathPrefix(`/_oauth`)"
+      - "traefik.http.routers.redirect.middlewares=traefik-forward-auth"
 
       - "traefik.http.middlewares.traefik-forward-auth.forwardauth.address=http://traefik-forward-auth:4181"
       - "traefik.http.middlewares.traefik-forward-auth.forwardauth.authResponseHeaders=X-Forwarded-User"
