--- a/client/package.json
+++ b/client/package.json
@@ -15,14 +15,20 @@
   "private": false,
   "type": "module",
   "scripts": {
-    "build": "react-scripts build",
+    "build": "npx react-scripts build",
     "clean": "npx rimraf build/ node_modules/ coverage/ playwright-report/  *.svg",
-    "configapp": "script/config.bash",
+    "config:dev": "npx shx cp config/dev.js public/env.js && npx shx cp config/dev.js build/env.js",
+    "config:prod": "npx shx cp config/prod.js public/env.js && npx shx cp config/prod.js build/env.js",
+    "config:test": "npx shx cp config/test.js public/env.js && npx shx cp config/test.js build/env.js",
     "develop": "npx react-scripts start",
     "format": "prettier --ignore-path ../.gitignore --write \"**/*.{ts,tsx,css,scss}\"",
     "graph": "npx madge --image src.svg src && npx madge --image test.svg test",
     "start": "serve -s build -l 4000",
     "syntax": "npx eslint . --fix",
+    "test:all": "yarn test:unit && yarn test:int && yarn test:e2e",
+    "test:e2e": "yarn build && yarn configapp:test && npx kill-port 4000 && yarn start >/dev/null & playwright test && npx kill-port 4000",
+    "test:int": "jest -c ./jest.integration.config.json ../test/integration --coverage",
+    "test:unit": "jest -c ./jest.config.json ../test/unitTests --coverage",
     "test": "script/test.bash"
   },
   "eslintConfig": {
@@ -40,33 +46,33 @@
     "@mui/icons-material": "^5.14.8",
     "@mui/material": "^5.14.8",
     "@reduxjs/toolkit": "^1.9.7",
+    "@types/styled-components": "^5.1.32",
+    "@typescript-eslint/eslint-plugin": "^6.12.0",
+    "@typescript-eslint/parser": "^6.12.0",
     "dotenv": "^16.1.4",
+    "eslint": "^8.54.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-jest": "^27.6.0",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-react": "^7.33.2",
     "oidc-client-ts": "^2.2.2",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-iframe": "^1.8.5",
     "react-is": "^18.2.0",
     "react-oidc-context": "^2.2.2",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.20.0",
+    "react-scripts": "^5.0.1",
     "react-tabs": "^6.0.2",
     "redux": "^4.2.1",
     "resize-observer-polyfill": "^1.5.1",
     "serve": "^14.2.1",
     "styled-components": "^6.1.1",
-    "typescript": "^4.9.5",
-    "react-iframe": "^1.8.5",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-jest": "^27.6.0",
-    "@types/styled-components": "^5.1.32",
-    "eslint": "^8.54.0",
-    "eslint-plugin-import": "^2.29.0",
-    "eslint-plugin-jsx-a11y": "^6.8.0",
-    "eslint-plugin-react": "^7.33.2",
-    "@typescript-eslint/eslint-plugin": "^6.12.0",
-    "@typescript-eslint/parser": "^6.12.0",
-    "react-scripts": "^5.0.1"
+    "typescript": "^4.9.5"
   },
   "devDependencies": {
     "@babel/core": "^7.23.3",
@@ -84,6 +90,7 @@
     "jest-environment-jsdom": "^29.7.0",
     "playwright": "^1.32.1",
     "prettier": "3.1.0",
+    "shx": "^0.3.4",
     "ts-jest": "^29.1.1"
   },
   "browserslist": {
